--- a/app/options.html
+++ b/app/options.html
@@ -31,6 +31,14 @@
         <script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
         <script src="bower_components/ngFx/dist/ngFx.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+        <script src="bower_components/angular-ui-mask/dist/mask.js"></script>
+        <script src="bower_components/angular-ui-scroll/dist/ui-scroll.js"></script>
+        <script src="bower_components/angular-ui-scrollpoint/dist/scrollpoint.js"></script>
+        <script src="bower_components/angular-ui-event/dist/event.js"></script>
+        <script src="bower_components/angular-ui-validate/dist/validate.js"></script>
+        <script src="bower_components/angular-ui-indeterminate/dist/indeterminate.js"></script>
+        <script src="bower_components/angular-ui-uploader/dist/uploader.js"></script>
+        <script src="bower_components/angular-ui-utils/index.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
